--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
         <video class="video-player" id="user-1" autoplay playsinline src=""></video>
         <video class="video-player" id="user-2" autoplay playsinline src=""></video>
     </div>
+
+    <div id="controls">
+        <div class="control-container" id="camera-btn">
+            <img src="icons/camera.png"/>
+        </div>
+        <div class="control-container" id="mic-btn">
+            <img src="icons/mic.png"/>
+        </div>
+        <a href="lobby.html">
+            <div class="control-container" id="leave-btn">
+                <img src="icons/phone.png"/>
+            </div>
+        </a>
+    </div>
     
 </body>
 <script src="agora-rtm-sdk-1.5.1.js"></script>
