Updated by shankar

--- a/index.html
+++ b/index.html
@@ -1,25 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GoLiveCode</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/64d58efce2.js"
+      crossorigin="anonymous"
+    ></script>
+    
     <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <form id="join-form">
-        <input type="text" name="invite_link" required/>
-        <input type="submit" value="Join Room"/>
-    </form>
-</body>
-<script>
-    let form = document.getElementById('join-form')
+    <title>GoLiveCode</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="forms-container">
+        <div class="signin-signup">
 
-    form.addEventListener('submit', (e) => {
-        e.preventDefault()
-        let inviteCode = e.target.invite_link.value
-        window.location = `lobby.html?room=${inviteCode}`
-    })
-</script>
+          <form action="#" class="sign-in-form" id="join-form">
+            <h2 class="title">Join Room</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" placeholder="Room-ID" name="invite_link" required/>
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" placeholder="Password" />
+            </div>
+            <input type="submit" value="Join Room" class="btn solid" />
+            <p class="social-text">Or Sign in with social platforms</p>
+            <div class="social-media">
+              <a href="#" class="social-icon">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-google"></i>
+              </a>
+              <a href="#" class="social-icon">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+            </div>
+          </form>
+          
+        </div>
+      </div>
+
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <img src="img/teacher.svg" class="image" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
+    <script>
+      let form = document.getElementById('join-form')
+  
+      form.addEventListener('submit', (e) => {
+          e.preventDefault()
+          let inviteCode = e.target.invite_link.value
+          window.location = `lobby.html?room=${inviteCode}`
+      })
+  </script>
+  </body>
 </html>
